# media-to-srt

./: .gitignore  README.md  pyproject.toml  transcribe-me.py
output/: test1_default.srt  test2_punctuation.srt  test3_lowercase.srt  test4_both.srt
