[project]
name = "media-to-srt"
version = "0.1.0"
description = "Transcribe audio files to SRT subtitles using Whisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "safetensors>=0.5.2",
    "soundfile>=0.13.1",
    "spacy>=3.7.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.48.2",
]

